2005-03-10  Benoît Dejean  <TazForEver@dlfp.org>

	* src/callbacks.c: (update_disk), (compare_disks), (add_new_disks):
	Added update_disk() so that compare_disk() and add_new_disks() retrieve
	disk info in the same way.

2005-03-10  Benoît Dejean  <TazForEver@dlfp.org>

	* src/callbacks.c: (get_icon_for_device), (add_new_disks):
	Better icon theme support.

2005-03-09  Benoît Dejean  <TazForEver@dlfp.org>

	* src/procman.c: (procman_data_new):
	* src/procman.h:
	* src/proctable.c: (proctable_free_info), (remove_info_from_list),
	(get_info), (proctable_free_table):
	
	Allocates ProcInfo::user with GStringChunk.
	Allocates ProcInfo with GMemChunk.

2005-03-09  Benoît Dejean  <TazForEver@dlfp.org>

	* configure.in: Post release version bump.

2005-03-07  Benoît Dejean  <TazForEver@dlfp.org>

	* NEWS: oops, forgot to commit.

2005-03-07  Benoît Dejean  <TazForEver@dlfp.org>

	* configure.in:
	* NEWS: Released 2.10.0.

2005-03-06  Benoît Dejean  <TazForEver@dlfp.org>

	* gnome-system-monitor.spec: Updated.

2005-02-28  Benoît Dejean  <TazForEver@dlfp.org>

	* NEWS: Released 2.9.92.

2005-02-25  Benoît Dejean  <TazForEver@dlfp.org>

	* configure.in: /me stupid. I've already post-bumped version.

2005-02-24  Benoît Dejean  <TazForEver@dlfp.org>

	* configure.in: post release bump 2.9.93.

2005-02-16  Benoît Dejean  <TazForEver@dlfp.org>

	* src/defaulttable.h:
	* src/prettytable.c: (new_application), (application_finished),
	(pretty_table_new), (pretty_table_get_icon), (pretty_table_free),
	(create_scaled_icon), (load_icon_for_commands), (cb_g_free),
	(cb_g_ptr_array_free), (load_default_table):
	* src/prettytable.h:
	* src/procman.h: Reworked so that icons loaded from the default table
	share their pixbuf.
	
	* src/procdialogs.c: (procdialog_create_hide_dialog):
	* src/procdialogs.h: Removed dead code.

2005-02-08  Hongli Lai  <h.lai@chello.nl>

	* configure.in, src/Makefile.am:
	  Removed hard dependancy on libgnomesu.