@@ -17,7 +17,7 @@ LIBGNOMEUI_REQUIRED=2.0.0
 GCONF_REQUIRED=1.1.5
 LIBWNCK_REQUIRED=2.5.0
 LIBGTOP_REQUIRED=2.9.5
-GTK_REQUIRED=2.5.0
+GTK_REQUIRED=2.6.0
 GNOME_VFS_REQUIRED=2.6.0
 
 PKG_CHECK_MODULES(PROCMAN, libgnome-2.0 >= $LIBGNOME_REQUIRED libgnomeui-2.0 >= $LIBGNOMEUI_REQUIRED gconf-2.0 >= $GCONF_REQUIRED libgtop-2.0 >= $LIBGTOP_REQUIRED libwnck-1.0 >= $LIBWNCK_REQUIRED gtk+-2.0 >= $GTK_REQUIRED gnome-vfs-2.0 >= $GNOME_VFS_REQUIRED)
